[package]
name = "iroh-ffi"
version = "0.30.0"
edition = "2021"
publish = false
readme = "README.md"
description = "A toolkit for building distributed applications"
license = "MIT OR Apache-2.0"
authors = ["n0 team"]
repository = "https://github.com/n0-computer/iroh-ffi"
homepage = "https://iroh.computer"
documentation = "https://iroh.computer/docs"

rust-version = "1.81"

[workspace]
members = ["iroh-js"]

[package.metadata.maturin]
name = "iroh"

[lib]
name = "iroh_ffi"
crate-type = ["staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.80"
blake3 = "1.3.3"
bytes = "1"
data-encoding = { version = "2.3.3" }
iroh = { version = "0.30" }
iroh-base = { version = "0.30", features = ["ticket"] }
iroh-io = { version = "0.6" }
iroh-gossip = { version = "0.30", features = ["rpc"] }
iroh-docs = { version = "0.30", features = ["rpc"] }
iroh-blobs = { version = "0.30", features = ["rpc"] }
iroh-metrics = { version = "0.30" }
iroh-node-util = { version = "0.30", features = [] }
libc = "0.2.141"
num_cpus = { version = "1.15.0" }
range-collections = "0.4.0"
thiserror = "1.0.44"
tokio = "1.25.0"
tokio-util = { version = "0.7", features = ["io-util", "io", "rt"] }
uniffi = { version = "0.28.0", features = ["cli", "tokio"] }
url = "2.4"
futures = "0.3.28"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17" }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
futures-lite = "2.3.0"
derive_more = { version = "1.0.0", features = ["debug"] }
quic-rpc = "0.17"
rand = "0.8"


[dev-dependencies]
rand = "0.8"
tempfile = "3.4"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
uniffi = { version = "0.28.0", features = ["build"] }

[profile.release]
lto = true
