[package]
name = "iroh-ffi"
version = "0.35.0"
edition = "2021"
publish = false
readme = "README.md"
description = "A toolkit for building distributed applications"
license = "MIT OR Apache-2.0"
authors = ["n0 team"]
repository = "https://github.com/n0-computer/iroh-ffi"
homepage = "https://iroh.computer"
documentation = "https://iroh.computer/docs"

rust-version = "1.85"

[workspace]
members = ["iroh-js"]

[package.metadata.maturin]
name = "iroh"

[lib]
name = "iroh_ffi"
crate-type = ["staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.80"
blake3 = "1.3.3"
bytes = "1"
data-encoding = { version = "2.3.3" }
iroh = { version = "0.93" }
iroh-base = { version = "0.93", features = ["ticket"] }
iroh-io = { version = "0.6" }
iroh-gossip = { version = "0.93", features = [] }
iroh-docs = { version = "0.93", features = [] }
iroh-blobs = { version = "0.95", features = [] }
iroh-metrics = { version = "0.36" }
libc = "0.2.141"
num_cpus = { version = "1.15.0" }
range-collections = "0.4.0"
thiserror = "1.0.44"
tokio = "1.25.0"
tokio-util = { version = "0.7", features = ["io-util", "io", "rt"] }
uniffi = { version = "0.28.0", features = ["cli", "tokio"] }
url = "2.4"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17" }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
derive_more = { version = "1.0.0", features = ["debug"] }
rand = "0.9"
n0-future = "0.2.0"
irpc = "0.9"


[dev-dependencies]
tempfile = "3.4"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
uniffi = { version = "0.28.0", features = ["build"] }

[profile.release]
lto = true
