[package]
name = "iroh-ffi"
version = "1.0.0"
edition = "2024"
publish = false
readme = "README.md"
description = "A toolkit for building distributed applications"
license = "MIT OR Apache-2.0"
authors = ["n0 team"]
repository = "https://github.com/n0-computer/iroh-ffi"
homepage = "https://iroh.computer"
documentation = "https://docs.iroh.computer"

rust-version = "1.91"

[workspace]
members = ["iroh-js"]

[package.metadata.maturin]
name = "iroh"

[lib]
name = "iroh_ffi"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[target.'cfg(target_os = "android")'.dependencies]
ndk-context = "0.1"
jni = "0.22"

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.80"
iroh = { version = "1.0.0" }
iroh-base = { version = "1.0.0" }
iroh-metrics = { version = "1.0.0" }
iroh-relay = { version = "1.0.0", default-features = false }
iroh-services = { version = "1.0.0", default-features = false }
iroh-tickets = { version = "1.0.0" }
n0-error = { version = "1.0.0" }
thiserror = "2.0"
tokio = "1.25.0"
uniffi = { version = "0.31.1", features = ["cli", "tokio"] }
url = "2.4"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17" }
serde = { version = "1.0.196", features = ["derive"] }
derive_more = { version = "2.0", features = ["debug"] }
n0-future = "0.3"


[dev-dependencies]
tempfile = "3.4"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
uniffi = { version = "0.31.1", features = ["build"] }

[profile.release]
lto = true
