[build-system]
requires = ["maturin>=1.2,<2.0", "uniffi-bindgen"]
build-backend = "maturin"

[project]
name = "iroh"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: System :: Networking",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
readme = "README.python.md"


