[package]
edition = "2021"
name = "number0_iroh"
version = "0.25.0"
license = "MIT OR Apache-2.0"
authors = ["n0 team"]
repository = "https://github.com/n0-computer/iroh-ffi"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0-alpha.8", default-features = false, features = ["napi8", "error_anyhow", "async", "chrono_date"] }
napi-derive = "3.0.0-alpha.7"
anyhow = "1.0.69"
async-trait = "0.1.80"
blake3 = "1.3.3"
bytes = "1"
data-encoding = { version = "2.3.3" }
iroh = { version = "0.25.0" }
iroh-io = { version = "0.6" }
libc = "0.2.141"
num_cpus = { version = "1.15.0" }
range-collections = "0.4.0"
thiserror = "1.0.44"
tokio = "1.25.0"
tokio-util = { version = "0.7", features = ["io-util", "io"] }
url = "2.4"
flume = "0.11"
futures = "0.3.28"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17" }
chrono = "0.4.38"
derive_more = { version = "=1.0.0-beta.7", features = ["debug"] }


[build-dependencies]
napi-build = "2"
